# gmapping-json

./: .gitignore  .gitmodules  .mcp.json  001.yaml  CMakeLists.txt  Dockerfile  README.md  map.yaml  merged_map.yaml  merged_map_fixed.yaml  merged_map_synced.yaml  new_map.yaml  offset.yaml  ros_udp_publisher.py  scan_overlay_zoomed.yaml  test.yaml  test_map.yaml
.claude/skills/inject-map-to-bag/: SKILL.md
.claude/skills/rosbag-to-map/: SKILL.md
.serena/: project.yml
config/: default.json
include/: gmapping_wrapper.h  rosbag_writer.h  rosbridge_types.h  web_server.h
rosbridge_relay/: Dockerfile  build.sh  docker-compose.yml  relay.py  run.sh
rosbridge_relay/rosbridge_server/: Dockerfile  entrypoint.sh
src/: gmapping_wrapper.cpp  main.cpp  rosbag_writer.cpp  udp_server.h  websocket_client.h
tools/: analyze_odom_jumps.py  bag_player.py  bag_to_udp.py  inject_map.launch  inject_map_to_bag.sh  plot_particle_spread.py  plot_particle_xy.py  plot_scan_on_map.py  plot_scan_on_map_zoomed.py  ros_to_udp_bridge.py  rosbag_sender.py  rosbag_to_map.sh  run_mapping_inner.sh  start_server.sh  test_sender.py  visualize_mapping_process.py  visualize_odom.py  visualize_scan_evolution.py  visualize_scan_on_odom.py  visualize_scan_on_odom_zoomed.py
